tests/fixtures/Fortran90/test_kind_len_selectors_semantic/invalid_kind_selector_variable.f90
! INVALID: KIND selector with variable (non-constant expression)
! ISO/IEC 1539:1991 Section 4.3.1 (R404): kind-selector requires scalar-int-initialization-expr
! This should produce E674-001 error
program test_kind_invalid_var
  implicit none
  integer :: k
  k = 4
  ! ERROR: KIND selector requires constant expression, not variable
  integer(kind=k) :: a
  a = 1
end program test_kind_invalid_var
